# kookmin-feed-database-api-server

./: .env.example  .gitignore  Dockerfile  api_doc.md  main.py  pyproject.toml  readme.md  requirements.txt  supervisord.conf
.github/workflow/: develop.yml  main.yml
.github/workflows/: deploy-database-api.yml
api/: deps.py
api/models/: common.py  discord.py  kakao.py
api/v1/: api.py  discord.py  health.py  kakao.py  notice.py  scraper.py
config/: db_config.py  env_loader.py
middleware/: __init__.py  local_access.py
