[project]
name = "kookmin-feed-database-api-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "motor>=3.7.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
]
